swift-tools-version:5.1

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
+*.xcodeproj
 
 ## Build generated
 build/
@@ -40,6 +41,7 @@ playground.xcworkspace
 # Packages/
 # Package.pins
 .build/
+Package.resolved
 
 # CocoaPods
 #
